# wasm-brainfuck-interpreter

./: .gitignore  README.md  package.json  webpack.config.js
public/: index.html
public/2/: 2.js
public/js/: js.js
public/wasm/: wasm.js
src/: index.html
src/js/: _source.js  index.js
src/wasm/: Cargo.toml  index.js  lib.wasm  optimized.js  optimized.wasm  optimized_bg.wasm
src/wasm/src/: interpreter.rs  lib.rs
