[package]
name = "wasm"
version = "0.1.0"
authors = ["rnitta <attinyes@gmail.com>"]
license = "UNLICENSED"

[lib]
crate-type = ["cdylib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = "0.2.40"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
]
